--- a/MEAME2/MEAME2.csproj
+++ b/MEAME2/MEAME2.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System.Data.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DSPcomms.cs" />
+    <Compile Include="DSPregisters.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Commands.cs" />
