--- a/MEAME2/MEAME2.csproj
+++ b/MEAME2/MEAME2.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="DSPcomms.cs" />
     <Compile Include="DSPregisters.cs" />
+    <Compile Include="logspam.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Commands.cs" />
