--- a/MEAME2/packages.config
+++ b/MEAME2/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LanguageExt.Core" version="2.2.10-beta" targetFramework="net452" />
+  <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net452" />
   <package id="Nancy" version="1.4.3" targetFramework="net45" />
   <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net45" />
+  <package id="System.Reactive" version="4.0.0-preview00001" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
 </packages>
